--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
   "presets": ["es2015"],
-  "plugins": ["babel-plugin-add-module-exports"]
+  "plugins": ["babel-plugin-add-module-exports"],
+  "env": {
+    "test": {
+      "presets": ["es2015"],
+	  "plugins": []
+    }
+  }
 }
