--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "touch control component can support the traditional Chinese calendar",
   "main": "lib/lunar-cale",
   "scripts": {
-    "build": "npm run doc && webpack --mode=build",
-    "dev": "webpack --progress --colors --watch --mode=dev",
-    "doc": "jsdoc2md src/lunar_cale.js --template README.hbs > README.md"
+    "build": "npm test && npm run doc && webpack --mode=build",
+    "doc": "jsdoc2md src/lunar_cale.js --template README.hbs > README.md",
+    "test": "cross-env NODE_ENV=test jest",
+    "dev": "webpack --progress --colors --watch --mode=dev"
   },
   "repository": {
     "type": "git",
@@ -25,19 +26,21 @@
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
+    "babel-jest": "^22.2.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.23.1",
     "eslint": "^3.0.1",
     "eslint-loader": "^1.4.0",
+    "jest": "^22.2.1",
+    "jquery": "^3.3.1",
     "jsdoc-to-markdown": "^1.3.6",
     "jsdom": "^9.4.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "mocha": "^2.5.3",
-    "mocha-jsdom": "^1.1.0",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
